--- a/java scripts. pt 3/random/progeto random.html
+++ b/java scripts. pt 3/random/progeto random.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/random.css">
+    <link rel="stylesheet" href="random.css">
     <title>random</title>
 </head>
-<body>
-    <img src="" alt="">
+<body class="container">
+    <img src="sorteador.png" alt="sorteador">
     <h2>sortear um número</h2>
     <div><input placeholder="entre" class="input-min"type="number">
         <input placeholder="e" class="input-max" type="number">
