--- a/java scripts. pt 3/operadores ternário/desafiofor.html
+++ b/java scripts. pt 3/operadores ternário/desafiofor.html
@@ -26,12 +26,17 @@
 
     function procurar() {
 
-        for (let i = 0; i < contacts.length; i++) {
+      /*  for (let i = 0; i < contacts.length; i++) {
             if (input.value.toLowerCase() === contacts[i].name.toLowerCase()) {
                 p.innerHTML = `contato encontrado name: ${contacts[i].name}tel. ${contacts[i].number}`
                 break}
-            else { p.innerHTML = "contato não encontrado ,tente novamente" }
+            else { p.innerHTML = "contato não encontrado ,tente novamente" }*/
 
+ for (const contact of contacts) {
+            if (input.value.toLowerCase() === contact.name.toLowerCase()) {
+                p.innerHTML = `contato encontrado name: ${contact.name}tel. ${contact.number}`
+                break}
+            else { p.innerHTML = "contato não encontrado ,tente novamente" }
 
 
         }
