fechamento tegs (video)23/0724

--- a/assets/mario/mario.html
+++ b/assets/mario/mario.html
@@ -30,8 +30,12 @@
     </div>
 
     <div class="video-mario">
-        <video src=".//img/Videos/video.mp4"autoplay muted loop</video>
+        <video src=".//img/Videos/video.mp4" autoplay muted loop></video>
+            <div class="mascara"></div>
 
+            
+
+            
     </div>
 </body>
 
