--- a/assets/mario/mario.html
+++ b/assets/mario/mario.html
@@ -8,8 +8,33 @@
     <link rel="stylesheet" href="./mario.css">
 </head>
 
+
+
+
+
+
+
+
 <body>
+    <div class="mascara-form"></div>
+
+    <div class="menu" alt="logo-mario">
+        <img src="./img/logo-header.png" alt="header-mario">
+
+        <a>home</a>
+        <a>nossos serviços</a>
+        <a>fale conosco</a>
+    </div>
+
     <div class="caixa-mae">
+
+
+
+
+
+
+
+
         <div class="caixa- p1">
             <img src="./logo.png" alt="logo do mario">
             <p>Encanadores- Mario&Luigi-Resolvendo seus poblemas Hidraulicos Com Estilo!</p>
@@ -24,19 +49,28 @@
             <button>entre em contato</button>
         </div>
         <div class="caixa-p2">
-            <img class="img-2" src="./mario.png" alt="Image-Mari&Luigi">
+            <img class="img-2" src="./mario.png" alt="Image-Mario&Luigi">
 
         </div>
     </div>
 
     <div class="video-mario">
         <video src=".//img/Videos/video.mp4" autoplay muted loop></video>
-            <div class="mascara"></div>
+        <div class="mascara"></div>
 
-            
-
-            
+        <a href="https://api.whatsapp.com/send?phone=5541955599959&text=Encanadores-%20Mario&Luigi-Resolvendo%20seus%20poblemas%20Hidraulicos%20Com%20Estilo!"
+            class="link-whatsapp">
+            <img src="./img/Videos/Captures/whatsapp.png" alt="link- whatsapp">
+        </a>
     </div>
+    <form class="fale-conosco">
+        <input placeholder="seu nome"><input
+            placeholder="telefone">
+            <textarea>qual e o seu poblema:</textarea>
+            <button>pedir orçamento</button>
+    </form>
+
+
 </body>
 
 </html>
