mario transação form. 30/07/24

--- a/assets/mario/mario.html
+++ b/assets/mario/mario.html
@@ -46,7 +46,7 @@
             </p>
 
 
-            <button>entre em contato</button>
+            <button onclick="cliqueinobotão()">entre em contato</button>
         </div>
         <div class="caixa-p2">
             <img class="img-2" src="./mario.png" alt="Image-Mario&Luigi">
@@ -72,5 +72,6 @@
 
 
 </body>
+<script src="./scriptsmario.js"></script>
 
 </html>
