--- a/assets/mario/mario.html
+++ b/assets/mario/mario.html
@@ -16,10 +16,10 @@
 
 
 <body>
-    <div class="mascara-form"></div>
+ <div class = "mascara-form" onclick= "esconderform()"></div>
 
     <div class="menu" alt="logo-mario">
-        <img src="./img/logo-header.png" alt="header-mario">
+        <img src="./img/logo-header.png" alt="head-mario">
 
         <a>home</a>
         <a>nossos serviços</a>
@@ -46,7 +46,7 @@
             </p>
 
 
-            <button onclick="cliqueinobotão()">entre em contato</button>
+            <button onclick="mostrarform()">entre em contato</button>
         </div>
         <div class="caixa-p2">
             <img class="img-2" src="./mario.png" alt="Image-Mario&Luigi">
@@ -56,7 +56,11 @@
 
     <div class="video-mario">
         <video src=".//img/Videos/video.mp4" autoplay muted loop></video>
-        <div class="mascara"></div>
+
+
+        <div class="video-mascara"></div>
+
+       
 
         <a href="https://api.whatsapp.com/send?phone=5541955599959&text=Encanadores-%20Mario&Luigi-Resolvendo%20seus%20poblemas%20Hidraulicos%20Com%20Estilo!"
             class="link-whatsapp">
@@ -64,10 +68,9 @@
         </a>
     </div>
     <form class="fale-conosco">
-        <input placeholder="seu nome"><input
-            placeholder="telefone">
-            <textarea>qual e o seu poblema:</textarea>
-            <button>pedir orçamento</button>
+        <input placeholder="seu nome"><input placeholder="telefone">
+        <textarea>qual e o seu poblema:</textarea>
+        <button>pedir orçamento</button>
     </form>
 
 
