--- a/java scripts. pt 3/operadores ternário/to white.html
+++ b/java scripts. pt 3/operadores ternário/to white.html
@@ -24,25 +24,35 @@
         { name: "wilian", number: "(40)934343434" },
     ]
 
-    function procurar() { 
+    function procurar() { let found = false;
+        let i = 0;
+        while (i < contacts.length) {
+            const contact = contacts[i];
+            if (input.value.toLowerCase() === contact.name.toLowerCase()) {
+                p.innerHTML = `Contato encontrado Nome: ${contact.name} Tel: ${contact.number}`;
+                found = true;
+                break;
+            }
+            i++;
+        }
 
-      /*  for (let i = 0; i < contacts.length; i++) {
-            if (input.value.toLowerCase() === contacts[i].name.toLowerCase()) {
-                p.innerHTML = `contato encontrado name: ${contacts[i].name}tel. ${contacts[i].number}`
-                break}
-            else { p.innerHTML = "contato não encontrado ,tente novamente" }*/
+        if (!found) {
+            p.innerHTML = "Contato não encontrado, tente novamente";
+        }
+    }
 
- for (const contact of contacts) {
+
+/* for (const contact of contacts) {
             if (input.value.toLowerCase() === contact.name.toLowerCase()) {
                 p.innerHTML = `contato encontrado name: ${contact.name}tel. ${contact.number}`
                 break}
-            else { p.innerHTML = "contato não encontrado ,tente novamente" }
+            else { p.innerHTML = "contato não encontrado ,tente novamente" }*/
 
 
-        }
 
-    }
 
+    
+    
 
 
 
