alteração no html 11/08/24

--- a/assets/mario/mario.html
+++ b/assets/mario/mario.html
@@ -24,8 +24,8 @@
         <img src="./img/logo-header.png" alt="head-mario">
 
         <a>home</a>
-        <a>nossos serviços</a>
-        <a>fale conosco</a>
+        <a href="./nossos-serviços.html">nossos serviços </a>
+        <a class="fale" onclick="fale() " href="https://api.whatsapp.com/send?phone=5541955599959&text=Encanadores-%20Mario&Luigi-Resolvendo%20seus%20poblemas%20Hidraulicos%20Com%20Estilo!">fale conosco</a>
     </div>
 
     <div class="caixa-mae">
