aula jokempow 3/09/24 fim

--- a/java scripts. pt 3/math.js/jokenpow/index.html
+++ b/java scripts. pt 3/math.js/jokenpow/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <H1>jokem pô </H1>
+        <H1>jokem pôw </H1>
         <div class="buttons">
             <button id="rock" onclick="playhuman('rock')">&#x1f44a;</button>
             <button id="paper" onclick="playhuman('paper')">&#x1f590;</button>
@@ -20,8 +20,8 @@
         <p class="your-score">pontuação minha :<span id="human-score">0</span></p>
         <p class="Machine-score">pontuação do pc:<span id="Machine-score">0</span></p>
     </div>
-    
-    
+
+
 </body>
 
 <script src="./script.js"></script>
